// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`opens external links in a new tab with noopener noreferrer 1`] = `
"<div class="markdown"><p><a href="https://example.com/docs" target="_blank" rel="noopener noreferrer">absolute</a></p>
<p><a href="//example.com/docs" target="_blank" rel="noopener noreferrer">protocol relative</a></p>
<p><a href="../other-page">relative</a></p>
<p><a href="#section">anchor</a></p>
<p><a href="mailto:hi@example.com">mail</a></p>
<p><a href="/internal" target="_blank" rel="noopener noreferrer">authored new-tab internal link</a></p></div>"
`;

exports[`removes front matter without turning its final item into a heading 1`] = `"<div class="markdown"><h1 id="visible-content">Visible content</h1></div>"`;

exports[`renders Markdown Extra attributes without swallowing following content 1`] = `
"<div class="markdown"><p>Before</p>
<pre class="code-block"><code class="language-html">

&#x3C;example>Content&#x3C;/example>
</code></pre>
<h2 id="after">After</h2></div>"
`;

exports[`renders a language fence as an escaped Prism code block 1`] = `
"<div class="markdown"><pre class="code-block"><code class="language-html">

&#x3C;example>Content&#x3C;/example>
</code></pre></div>"
`;

exports[`renders inline code as mark without changing fenced code 1`] = `
"<div class="markdown"><p>Use <mark>inlineValue</mark> here.</p>
<pre class="code-block"><code class="language-javascript">

const fencedValue = true
</code></pre></div>"
`;

exports[`uses TypeScript highlighting for a multiline fence without a language 1`] = `
"<div class="markdown"><pre class="code-block"><code class="language-typescript">

const first = 1
const second = 2
</code></pre></div>"
`;

exports[`uses TypeScript highlighting for a single-line fence without a language 1`] = `
"<div class="markdown"><pre class="code-block"><code class="language-typescript">

const value = 1
</code></pre></div>"
`;
